<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Module.Setting.Fragment.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azure"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_Balance"
                    android:textColor="@color/txt_Balance"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/RechargePlan"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/RechargePlan"
                        android:textColor="@color/PureWhite"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:id="@+id/BalanceNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BalanceNum"
                    android:textColor="@color/PureWhite"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_layout">

                    <TextView
                        android:id="@+id/Statement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/RechargeDetails"
                        android:textColor="@color/PureWhite"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/custom_layout"
                android:text="@string/recharge_centre"
                android:textColor="@color/txt_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/three_hundred"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/balance_layout"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_three_hundred"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/three_hundred"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/five_hundred"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/balance_layout"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_five_hundred"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/five_hundred"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/one_thousand"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/balance_layout"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_one_thousand"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/one_thousand"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/two_thousand"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/balance_layout"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_two_thousand"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/two_thousand"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Five_thousand"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/balance_layout"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_Five_thousand"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Five_thousand"
                        android:textColor="@color/black"
                        android:textSize="22sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <RadioGroup
                    android:id="@+id/payment_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/WeChat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/WeChat"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/Alipay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/Alipay"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/edit_layout"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/edit_Bonus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="2"
                        android:background="@null"
                        android:inputType="number"
                        android:hint="@string/txt_Bonus" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_Bonus"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/Bonus_but"
                    android:text="@string/mmediate_recharge"
                    android:textColor="@color/PureWhite"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>